--- a/styles/all.scss
+++ b/styles/all.scss
@@ -43,9 +43,10 @@
 // Utilities
 @import "../node_modules/bootstrap/scss/utilities/api";
 
-@import "../styles/components/adoption";
-@import "../styles/components/change-image";
-@import "../styles/components/design-card";
-@import "../styles/components/header-height";
+//components
 @import "../styles/components/pill-btn";
+@import "../styles/components/change-image";
+@import "../styles/components/header-height";
+@import "../styles/components/design-card";
+@import "../styles/components/adoption";
 @import "../styles/components/utilities";
