--- a/styles/all.css
+++ b/styles/all.css
@@ -12017,13 +12017,13 @@ fieldset:disabled .btn {
 
 .header-height {
   height: calc(100vh - 64px);
-  background-image: url(../../img/home_mobile.png);
+  background-image: url(../img/home_mobile.png);
 }
 
 @media screen and (min-width: 992px) {
   .header-height {
     height: calc(100vh - 88px);
-    background-image: url(../../img/home.png);
+    background-image: url(../img/home.png);
   }
 }
 
@@ -12062,27 +12062,27 @@ fieldset:disabled .btn {
 }
 
 .adoption-card-1 div:first-child {
-  background-image: url(../../img/dog01.png);
+  background-image: url(../img/dog01.png);
 }
 
 .adoption-card-1:hover div:first-child {
-  background-image: url(../../img/dog01-hover.png);
+  background-image: url(../img/dog01-hover.png);
 }
 
 .adoption-card-2 div:first-child {
-  background-image: url(../../img/04.png);
+  background-image: url(../img/04.png);
 }
 
 .adoption-card-2:hover div:first-child {
-  background-image: url(../../img/dog04-hover.png);
+  background-image: url(../img/dog04-hover.png);
 }
 
 .adoption-card-3 div:first-child {
-  background-image: url(../../img/08.png);
+  background-image: url(../img/08.png);
 }
 
 .adoption-card-3:hover div:first-child {
-  background-image: url(../../img/dog03-hover.png);
+  background-image: url(../img/dog03-hover.png);
 }
 
 body {
