--- a/styles/components/_adoption.scss
+++ b/styles/components/_adoption.scss
@@ -12,20 +12,20 @@
 }
 
 .adoption-card-1 div:first-child{
-    background-image: url(../../img/dog01.png);
+    background-image: url(../img/dog01.png);
 }
 .adoption-card-1:hover div:first-child{
-    background-image: url(../../img/dog01-hover.png);
+    background-image: url(../img/dog01-hover.png);
 }
 .adoption-card-2 div:first-child{
-    background-image: url(../../img/04.png);
+    background-image: url(../img/04.png);
 }
 .adoption-card-2:hover div:first-child{
-    background-image: url(../../img/dog04-hover.png);
+    background-image: url(../img/dog04-hover.png);
 }
 .adoption-card-3 div:first-child{
-    background-image: url(../../img/08.png);
+    background-image: url(../img/08.png);
 }
 .adoption-card-3:hover div:first-child{
-    background-image: url(../../img/dog03-hover.png);
+    background-image: url(../img/dog03-hover.png);
 }
